--- a/package.json
+++ b/package.json
@@ -6,19 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "linter": "next lint",
+    "linter:fix": "next lint --fix",
+    "formatter": "prettier --check \"**/*.{js,jsx,ts,tsx,mdx}\" --cache",
+    "formatter:write": "prettier --write \"**/*.{js,jsx,ts,tsx,mdx}\" --cache",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.0.18",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
+    "axios": "^1.7.2",
+    "json-server": "^0.17.4",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@next/eslint-plugin-next": "^14.2.4",
+    "@types/json-server": "^0.14.7",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "prettier": "^3.3.2",
+    "typescript": "^5"
   }
 }
