--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@fontsource/inter": "^5.0.18",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "json-server": "^0.17.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
+    "redux-thunk": "^3.1.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
