--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,13 +7,19 @@
   "globals": {
     "React": true
   },
-  "extends": ["airbnb", "prettier", "eslint:recommended", "next/core-web-vitals"],
+  "extends": [
+    "airbnb",
+    "prettier",
+    "eslint:recommended",
+    "plugin:@tanstack/eslint-plugin-query/recommended",
+    "next/core-web-vitals"
+  ],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module",
     "ecmaFeatures": { "jsx": true }
   },
-  "plugins": ["prettier"],
+  "plugins": ["@tanstack/query", "prettier"],
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "curly": ["error", "multi"],
