--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "rm:all": "rm -rf node_modules .next out dist build",
+    "re:start": "npm rm:all && npm install && npm dev",
+    "re:build": "npm rm:all && npm install && npm build",
     "linter": "next lint",
     "linter:fix": "next lint --fix",
     "formatter": "prettier --check \"**/*.{js,jsx,ts,tsx,mdx}\" --cache",
@@ -16,6 +19,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.18",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@reduxjs/toolkit": "^2.2.6",
@@ -26,11 +30,14 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.1.2",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "redux-thunk": "^3.1.0",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
