--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-query-devtools": "^5.50.1",
     "axios": "^1.7.2",
+    "i18next": "^23.12.2",
     "json-server": "^0.17.4",
     "next": "14.2.4",
     "react": "^18",
