--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "json-server": "json-server --watch db/db.json -p 3333 --routes db/routes.json",
     "rm:all": "rm -rf node_modules .next out dist build",
-    "re:start": "npm rm:all && npm install && npm dev",
-    "re:build": "npm rm:all && npm install && npm build",
+    "re:start": "npm run rm:all && npm install && npm run dev",
+    "re:build": "npm run rm:all && npm install && npm run build",
     "linter": "next lint",
     "linter:fix": "next lint --fix",
     "formatter": "prettier --check \"**/*.{js,jsx,ts,tsx,mdx}\" --cache",
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-query-devtools": "^5.50.1",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "i18next": "^23.12.2",
     "json-server": "^0.17.4",
     "next": "14.2.4",
@@ -37,7 +38,9 @@
     "react-i18next": "^14.1.2",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-slick": "^0.30.2",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
     "zod": "^3.23.8"
   },
@@ -48,6 +51,7 @@
     "@types/json-server": "^0.14.7",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.2.4",
